--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "typescript": "^5.5.3"
     },
     "dependencies": {
+        "@prisma/client": "^5.16.2",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "prisma": "^5.16.2"
     }
 }
