--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "description": "",
     "devDependencies": {
         "@types/express": "^4.17.21",
+        "@types/morgan": "^1.9.9",
         "@types/node": "^20.14.10",
+        "morgan": "^1.10.0",
         "nodemon": "^3.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
@@ -23,6 +25,7 @@
         "@prisma/client": "^5.16.2",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "joi": "^17.13.3",
         "prisma": "^5.16.2"
     }
 }
