--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "joi": "^17.13.3",
+        "joi-password": "^4.2.0",
         "prisma": "^5.17.0"
     }
 }
