--- a/package.json
+++ b/package.json
@@ -23,10 +23,18 @@
     },
     "dependencies": {
         "@prisma/client": "^5.17.0",
+        "@types/passport": "^1.0.16",
+        "@types/passport-jwt": "^4.0.1",
+        "@types/passport-local": "^1.0.38",
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "joi": "^17.13.3",
         "joi-password": "^4.2.0",
+        "jsonwebtoken": "^9.0.2",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
+        "passport-local": "^1.0.0",
         "prisma": "^5.17.0"
     }
 }
