--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@prisma/client": "^5.17.0",
+        "@types/bcrypt": "^5.0.2",
         "@types/passport": "^1.0.16",
         "@types/passport-jwt": "^4.0.1",
         "@types/passport-local": "^1.0.38",
